--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -75,7 +75,7 @@
 	left: 0;
 	background: #fff;
 	z-index: 99999;
-	box-shadow: 5px 5px 15px -5px #851e3e;
+	box-shadow: 5px 5px 15px -5px #df2020;
 }
 
 @media only screen and (max-width: 992px) {
