--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -1,5 +1,5 @@
 .product__item {
-	border: 1px solid #851e3e;
+	border: 1px solid #df2020;
 	text-align: center;
 	padding: 30px;
 	cursor: pointer;
